@@ -186,6 +186,17 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.2</version>
+				<configuration>
+					<includes>
+						<include>**/*Test.java</include>
+						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					</includes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<repositories>
@@ -198,5 +209,4 @@
 			</snapshots>
 		</repository>
 	</repositories>
-
 </project>
